2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
    
    * plugins/applet/seahorse-applet.c: Don't crash when no text on clipboard
    and encrypt or sign.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/applet/seahorse-applet.c: Only free our own SeahorseContext
    in applet.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * pixmaps/Makefile.am:
    * pixmaps/seahorse-applet-encrypted.png:
    * pixmaps/seahorse-applet-key.png:
    * pixmaps/seahorse-applet-signed.png:
    * pixmaps/seahorse-applet-text.png:
    * pixmaps/seahorse-applet-unknown.png:
    * pixmaps/seahorse-applet.xcf:
    * plugins/applet/seahorse-applet.c: Show state of clipboard contents in 
    the applet icon. Only display relevant menu items. 
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * libseahorse/seahorse-notification.c: Update libnotify support to 0.3
    
2006-02-24  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-daemon.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * plugins/applet/seahorse-applet.c:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * src/main.c: Some small changes to our stock icon helper functions to
    allow multiple icon tables to be loaded. 
    
2006-02-22  Adam Schreiber  <sadam@clemson.edu>

    * plugins/gedit/seahorse-gedit-bonobo.c: include 
    seahorse-pgp-key.h so the gedit plugin builds.

2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/gedit/seahorse-gedit-bonobo.c:
    * plugins/gedit/seahorse-gedit-plugin.c: Delay initialization of
    SeahorseContext to first usage to speed up loading of gedit.
    
2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in:
    * plugins/applet/GNOME_SeahorseApplet.xml: