@@ -1,4 +1,10 @@
 2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-check-button-control.c:
+    * libseahorse/seahorse-check-button-control.h: Build a simpler API 
+    for attaching check buttons to gconf keys.
+    
+2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
     
     * plugins/applet/seahorse-applet.c: Don't crash when no text on clipboard
     and encrypt or sign.
